examples/test/testpolicy13677.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13677
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key14: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value7
          key18: value46
          key22: value36
      podSelector:
        matchLabels:
          key11: value1
          key23: value20
